--- a/scss/illinois-framework/_views.directory.scss
+++ b/scss/illinois-framework/_views.directory.scss
@@ -35,8 +35,8 @@
 
   &--person {
     margin-right: 35px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 0px;
+    margin-bottom: 10px;
 
     &--photo {
       width: 160px;
@@ -51,19 +51,19 @@
       & .name {
         line-height: 1.1;
         font-weight: 700;
-        color: #252525;
+        color: #252525 !important;
       }
 
       & .title {
-        padding-top: 10px;
+        padding-top: 5px;
         line-height: 1.1;
-        color: #252525;
+        color: #252525 !important;
       }
 
       & .email {
         padding-top: 10px;
         line-height: 1.1;
-        color: #252525;
+        color: #252525 !important;
       }
     }
   }
@@ -100,6 +100,11 @@
     font-size: 20px;
    }
   }
+}
+
+.il-content #directorySection {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .directory-output h2 {
